# FYS4411

./: .gitignore  .gitmodules  LICENSE
Project1/: CMakeLists.txt  benchmarking.ipynb  compile_project  configuration.txt  energies.txt  localEnergies.txt  main.cpp  results.ipynb  runUnitTests  simulation.ipynb  test.cpp  vmc
Project1/.ipynb_checkpoints/: Analysis-checkpoint.ipynb  results-checkpoint.ipynb  simulation-checkpoint.ipynb
Project1/src/: analysis.py  particles.cpp  particles.hpp  sampler.cpp  sampler.hpp  system.cpp  system.hpp
Project1/src/Hamiltonians/: ellipticaloscillator.cpp  ellipticaloscillator.hpp  hamiltonian.hpp  harmonicoscillator.cpp  harmonicoscillator.hpp
Project1/src/InitialStates/: initialhardshell.cpp  initialhardshell.hpp  initialstate.cpp  initialstate.hpp  randomuniform.cpp  randomuniform.hpp
Project1/src/WaveFunctions/: ellipticalhardshell.cpp  ellipticalhardshell.hpp  hardshell.cpp  hardshell.hpp  simplegaussian.cpp  simplegaussian.hpp  simplegaussiannumerical.cpp  simplegaussiannumerical.hpp  wavefunction.hpp
Project2/: Autoregressiv_DNN.ipynb  Autoregressiv_RNN_1.ipynb  Autoregressive RNN Bosons.ipynb  Autoregressive RNN Laphack.ipynb  Autoregressive RNN Last TF.ipynb  Autoregressive RNN TF symmetry.ipynb  Autoregressive RNN TF.ipynb  Autoregressive_RNN_2.ipynb  DNN 1 part TF 2D "Laphack".ipynb  DNN 1 part TF 2D.ipynb  DNN 1 part TF.ipynb  DNN 1 part autodiff.ipynb  DNN 1 part.ipynb  DNN 2 part TF sym.ipynb  DNN 2 part TF.ipynb  DNN one particle.ipynb  DNN quantum god.ipynb  Generative RNN-Copy2.ipynb  README.md  RNN.ipynb  (+6 more)
(+59 files in other folders)
